--- a/views/landingPage.ejs
+++ b/views/landingPage.ejs
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,7 +17,7 @@
                 <input type="password" name="password">
                 <button type="submit" class="btn btn-primary">Login</button>
             </form>
-            <p>Not a member? Sign up!</p>
+            <p><a href="/signupPage">Not a member? Sign up!</a></p>
         </div>
     </div>
 
